# ModFileGen

./: .gitignore  CI_SETUP.md  MANIFEST.in  PUBLISHING.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  python-package-conda.yml
notebooks/: run_dssat_converter.ipynb  run_stics_converter.ipynb  run_sticsv11successive_converter.ipynb
src/modfilegen/: __init__.py
src/modfilegen.egg-info/: PKG-INFO  SOURCES.txt
src/modfilegen/Converter/ApsimConverter/: IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  TROUBLESHOOTING.md  WEATHER_CREATION_SUMMARY.md  WEATHER_FILE_CREATION_GUIDE.md  __init__.py  apsimclimatconverter.py  apsimconverter.py  apsiminitconverter.py  apsimmanagementconverter.py  apsimsoilconverter.py  apsimweatherconverter.py  example_management.apsimx
src/modfilegen/Converter/ApsimConverter/apsim_output_example/-7.125_30.575_2011_MgtMais0_310_2/: Simulation.apsimx  weather.met
src/modfilegen/Converter/ApsimConverter/apsim_output_example/-7.125_30.575_2011_MgtMais0_320_2/: Simulation.apsimx
src/modfilegen/Converter/ApsimConverter/apsim_output_example/-7.125_30.575_2012_MgtMais0_310_2/: Management.apsimx  Simulation.apsimx
src/modfilegen/Converter/ApsimConverter/apsim_output_example/-7.125_30.575_2012_MgtMais0_320_2/: Management.apsimx  (+2 more)
src/modfilegen/Converter/CelsiusConverter/: celsiusconverter.py
src/modfilegen/Converter/DssatConverter/: dssatconverter.py  dssatcultivarconverter.py  dssatrun.sh  dssatrun_successive.sh  dssatsoilconverter.py  dssatsuccessiveconverter.py  dssatweatherconverter.py  dssatweatherconverter_v2.py  dssatxconverter.py
src/modfilegen/Converter/SticsConverter/: sticsclimatconverter.py  sticsconverter.py  sticsconverter2.py  sticsficiniconverter.py  sticsficplt1converter.py  sticsfictec1converter.py  sticsnewtravailconverter.py  sticsparamsolconverter.py  sticsrun.sh  sticsstationconverter.py  sticssuccessiveconverter.py  sticssuccessiveconverter_rotation.py
src/modfilegen/Converter/SticsV11Converter/: sticsclimatconverter.py  sticsconverter.py  sticsficiniconverter.py  sticsficplt1converter.py  sticsfictec1converter.py  sticsnewtravailconverter.py  sticsparamsolconverter.py  sticsrun.sh  sticsstationconverter.py  sticssuccessiveconverter.py  sticstempoparconverter.py
tests/: test_dssatconverter.py  test_sticsconverter.py  test_sticsconverter2.py
tests/data/: CelsiusV3nov17_dataArise.db  MasterInput.db  ModelsDictionaryArise.db
tests/data/cultivars/dssat/: MZCER047.SPE
tests/data/cultivars/dssatv48/: MZCER048.CUL
tests/successive/: ModelsDictionaryArise.db  test_sticssuccessiveconverter.py
tests/successive/output/: 909e1ada-1559-4673-8c63-35bc2190de35_stics.csv
tests/successive/output/temp/5.925_6.025_2000_Mgt1M0_150_2/: ficini.txt  mod_bamaize.sti  mod_bpmaize.sti  mod_profilP_tsol.sti  mod_rapportA.sti  mod_rapportP.sti  mod_samaize.sti  mod_spmaize.sti  modhistory.sti  new_travail.usm  recup.tmp
tests/successive/output/temp/5.925_6.025_2000_ROT_MAIZE_PEANUT_3Y_2__season_001/: climat.txt  ficini.txt  mod_bmaize.sti  mod_profil_tsol.sti  mod_rapport.sti  mod_smaize.sti  modhistory.sti  new_travail.usm  recup.tmp  station.txt
tests/successive/output/temp/5.925_6.025_2000_ROT_MAIZE_PEANUT_3Y_2__season_002/: climat.txt  fictec1.txt  mod_bpeanut.sti  mod_profil_tsol.sti  mod_rapport.sti  mod_speanut.sti  modhistory.sti  new_travail.usm  recup.tmp  var.mod
tests/successive/output/temp/5.925_6.025_2000_ROT_MAIZE_PEANUT_3Y_2__season_003/: climat.txt  fictec1.txt  mod_bmaize.sti  mod_profil_tsol.sti  mod_rapport.sti  mod_smaize.sti  modhistory.sti  new_travail.usm  recup.tmp
tests/successive/output/temp/5.925_6.025_2001_Mgt1M0_150_2/: climat.txt  ficplt1.txt  mod_bamaize.sti  mod_bpmaize.sti  mod_profilA_tsol.sti  mod_rapportA.sti  mod_rapportP.sti  mod_samaize.sti  mod_spmaize.sti  modhistory.sti  new_travail.usm  recup.tmp  tempoparv6.sti
tests/successive/output/temp/5.925_6.025_2002_Mgt1M0_150_2/: climat.txt  ficini.txt  ficplt2.txt  fictec1.txt  fictec2.txt  mod_bamaize.sti  mod_bpmaize.sti  mod_profilA_tsol.sti  mod_rapportA.sti  mod_rapportP.sti  mod_samaize.sti  mod_spmaize.sti  modhistory.sti  new_travail.usm  param.sol  recup.tmp  station.txt  tempopar.sti
(+10 files in other folders)
